--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
                     </tr>
 
                     <!--Usuarios que han asistido a la capacitación-->
-
+                    
+                    <tr>
+                        <td>Michael vargas</td>
+                        <td>mavargasb@indracompany.com</td>
+                        <td>1/8/2025</td>
+                    </tr>
 
                 </tbody>
             </table>
