--- a/index.html
+++ b/index.html
@@ -81,7 +81,12 @@
                         <td>mavargasb@indracompany.com</td>
                         <td>1/8/2025</td>
                     </tr>
-
+                    
+                    <tr>
+                        <td>Fabio A Medina J </td>
+                        <td>famedinaj@compensarsalud.com</td>
+                        <td>1/8/2025</td>
+                    </tr>
                 </tbody>
             </table>
         </section>
