--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                         <td>1/8/2025</td>
                     </tr>
 
+                    <tr>
+                        <td>Andres Buitrago</td>
+                        <td>mavargasb@indracompany.com</td>
+                        <td>1/8/2025</td>
+                    </tr>
+
                 </tbody>
             </table>
         </section>
