--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                     <!--Usuarios que han asistido a la capacitación-->
                     
                     <tr>
-                        <td>Michael vargas</td>
-                        <td>mavargasb@indracompany.com</td>
-                        <td>1/8/2025</td>
+                        <td>German Hernandez</td>
+                        <td>GAHERNANDEZL@compensarsalud.com</td>
+                        <td>01/08/2025</td>
                     </tr>
 
                 </tbody>
