Registro Asistencia GAHL Commit1

--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
                         <td>1/8/2025</td>
                     </tr>
 
+                    <tr>
+                        <td>German Hernandez</td>
+                        <td>gahernandezl@compensarsalud.com</td>
+                        <td>01/08/2025</td>
+                    </tr>
+
                 </tbody>
             </table>
         </section>
